force-app/main/default/objects/Quality_Inspection__c/Quality_Inspection__c.object-meta.xml
<CustomObject>
    <description>Quality Inspection scorecard, child of the standard WorkOrder. One per Job Complete. Built P_QI_HomeBuilder; reuses WorkOrder QI_* fields for write-back.</description>
    <label>Quality Inspection</label>
    <nameField>
        <displayFormat>QI-{0000}</displayFormat>
        <label>QI Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quality Inspections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>