force-app/main/default/objects/Quality_Inspection__c/fields/Avg_Score__c.field-meta.xml
<CustomField>
    <fullName>Avg_Score__c</fullName>
    <formula>IF(Total_Lines__c = 0, 0, Sum_Score__c / Total_Lines__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Score</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>