force-app/main/default/objects/Quality_Inspection__c/fields/Inspected_By__c.field-meta.xml
<CustomField>
    <fullName>Inspected_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inspected By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Quality_Inspections</relationshipName>
    <type>Lookup</type>
</CustomField>