force-app/main/default/objects/Quality_Inspection__c/fields/Passed_Lines__c.field-meta.xml
<CustomField>
    <fullName>Passed_Lines__c</fullName>
    <label>Passed Lines</label>
    <summaryFilterItems>
        <field>QI_Line__c.Score__c</field>
        <operation>greaterOrEqual</operation>
        <value>9</value>
    </summaryFilterItems>
    <summaryForeignKey>QI_Line__c.Quality_Inspection__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>