force-app/main/default/objects/Quality_Inspection__c/fields/Result__c.field-meta.xml
<CustomField>
    <fullName>Result__c</fullName>
    <formula>IF(Total_Lines__c = 0, &quot;Pending&quot;, IF(Failed_Lines__c &gt; 0, &quot;Red — Rework Required&quot;, IF(Score_Pct__c = 100, &quot;Excellent&quot;, &quot;Acceptable&quot;)))</formula>
    <label>Result</label>
    <type>Text</type>
</CustomField>