force-app/main/default/objects/Quality_Inspection__c/fields/Score_Pct__c.field-meta.xml
<CustomField>
    <fullName>Score_Pct__c</fullName>
    <formula>IF(Total_Lines__c = 0, 0, (Passed_Lines__c / Total_Lines__c) * 100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Score %</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>