force-app/main/default/objects/Quality_Inspection__c/fields/Sum_Score__c.field-meta.xml
<CustomField>
    <fullName>Sum_Score__c</fullName>
    <label>Sum of Scores</label>
    <summarizedField>QI_Line__c.Score__c</summarizedField>
    <summaryForeignKey>QI_Line__c.Quality_Inspection__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>