force-app/main/default/objects/Quality_Inspection__c/fields/Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Quality Inspections</relationshipLabel>
    <relationshipName>Quality_Inspections</relationshipName>
    <type>Lookup</type>
</CustomField>